leptos_macro/tests/view/56_generic_clone_and_fn_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `fun` on component `Inner`
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:10:24
   |
10 |             <Inner fun=true/>
   |                        ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Clone + Fn() -> bool` — a closure or function reference
note: required for `bool` to implement `Check_fun`
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
note: required by a bound in `__Inner::Helper::<F>::check_and_wrap_fun`
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `Helper::<F>::check_and_wrap_fun`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `extract_value` exists for struct `Wrap_fun<bool>`, but its trait bounds were not satisfied
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:10:24
   |
10 |             <Inner fun=true/>
   |                        ^^^^ method cannot be called on `Wrap_fun<bool>` due to unsatisfied trait bounds
...
15 | #[component]
   | ------------ method `extract_value` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/56_generic_clone_and_fn_wrong_type.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
